...
            )}

            <Button
              mode="outlined"
              onPress={handleChooseBackupLocation}
              style={styles.button}
              testID="choose-backup-location-btn"
            >
              Choose Backup Location
            </Button>

            <Button
              mode="contained"
...
              {maxBackups}
            </Text>
            <Button
              mode="outlined"
              onPress={() => setShowChangePassword(true)}
              style={styles.button}
              testID="change-password-btn"
            >
              Change password
            </Button>
          </Card.Content>
        </Card>

...
